Fix: Add align-content to .rocket in styles
`.rocket`クラスに`align-content: end`を追加しました。これにより、要素の配置が適切に調整され、デザインの一貫性が向上しました。併せて、グリッドレイアウト内での表示位置を最適化しました。

--- a/src/app/page.module.sass
+++ b/src/app/page.module.sass
@@ -41,5 +41,6 @@
   grid-area: distance
 .rocket
   grid-area: rocket
+  align-content: end
 .footer
   grid-area: footer
